# fastapi-news-feed

./: README.md  package-lock.json  pyproject.toml
app/: main.py
app/db/: session.py
app/models/: user.py
app/schemas/: user.py
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
